--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
     "scripts": {
         "client": "cd client && yarn start",
         "server": "nodemon server.js",
-        "dev": "concurrently --kill-others-onfail \"yarn server\"yarn client\""
+        "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
-        "body-parser": "^1.19.0",
-        "express": "^4.16.4"
+        "@material-ui/core": "^3.9.3",
+        "body-parser": "^1.18.3",
+        "express": "^4.16.4",
+        "material-ui": "^0.20.2",
+        "multer": "^1.4.1",
+        "mysql": "^2.16.0",
+        "nodemon": "^1.18.11",
+        "oracledb": "^3.1.2",
+        "react-event-listener": "^0.6.6"
     },
     "devDependencies": {
-        "concurrently": "4.1.0"
+        "concurrently": "^4.1.0"
     }
 }
+
