--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "movie",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://scd7896.github.io/movieToys",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "nodemon": "^1.19.0",
@@ -13,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
